--- a/Lith.FlatFile.Tests/Lith.FlatFile.Tests.csproj
+++ b/Lith.FlatFile.Tests/Lith.FlatFile.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="FlatteningHelperTests.cs" />
     <Compile Include="LineBuildingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lith.FlatFile.Core\Lith.FlatFile.Core.csproj">
