--- a/Lith.FlatFile.DummyModels/Lith.FlatFile.DummyModels.csproj
+++ b/Lith.FlatFile.DummyModels/Lith.FlatFile.DummyModels.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExampleNested.cs" />
     <Compile Include="ExampleObject.cs" />
     <Compile Include="DumbEnum.cs" />
     <Compile Include="ExampleObjectB.cs" />
